cursive-bootstrap/tests/ui/E-SEM/E-SEM-3012.cursive
// RUN: compile-fail
// DIAG: E-SEM-3012
// SPEC: 8.17
// DESC: Duplicate method name in type

record Counter {
    value: i32
}

procedure Counter::get(~) -> i32 {
    return ~.value
}

procedure Counter::get(~) -> i32 {  //~ ERROR E-SEM-3012: duplicate method name
    return ~.value + 1
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
